update post: Sharding 101: Picking the Right Shard Key for Database Scalability

--- a/cm1jq3m51000908me8553aesk.md
+++ b/cm1jq3m51000908me8553aesk.md
@@ -53,6 +53,15 @@ While sharding can offer immense scalability, it’s crucial to ask: **Is the co
 
 ---
 
+### Types of Sharding
+
+1. **Key-Based Sharding**: Data is distributed based on a hash function applied to a shard key. This ensures an even spread of data but complicates resharding, as redistribution involves rehashing data.
+    
+2. **Range-Based Sharding**: Data is divided by ranges of values, often based on the primary key. While it offers simpler lookup logic, it risks hotspots if data is not evenly distributed.
+    
+3. **Relationship-Based Sharding**: Related data (e.g., a user and all their related records) is kept together on a single shard. This reduces the need for cross-shard transactions but can lead to imbalanced shard sizes.
+    
+
 ## The Pros and Cons of Sharding
 
 If your database grows beyond the limits of vertical scaling or replication, sharding may be the right approach. Here’s a look at the pros and cons of sharding:
@@ -148,7 +157,16 @@ This introduces overhead in terms of locking, read-and-write amplification, and 
 
 ---
 
-## Conclusion: Is Sharding Right for You?
+## Examples of Shard Key Strategies
+
+1. **User ID (High Cardinality, Stable)**: Ideal for applications where data is segmented by users (e.g., social media, e-commerce). It ensures that user-related data is grouped on the same shard.
+    
+2. **Order ID with Hashing (Even Distribution)**: In a transactional system, using order ID as a shard key ensures that write-intensive operations like order creation are spread evenly across shards.
+    
+3. **Composite Keys (Complex Queries)**: Combine multiple fields (e.g., user ID + timestamp) to ensure both even distribution and efficient querying, especially when dealing with large datasets or time-series data.  
+    
+    ## Conclusion: Is Sharding Right for You?
+    
 
 Sharding can be a powerful way to scale your database, especially when managing large volumes of data or handling intense read/write traffic. However, it should be viewed as a last resort after simpler solutions like vertical scaling, replication, or using specialized databases have been considered.
 
